# Scintillator-Detector-Final

./: CMakeLists.txt
B4a/: B4.root  CMakeCache.txt  G4History.macro  Makefile  cmake_install.cmake  run2.mac
B4a/include/: DetectorConstruction.hh  EventAction.hh  SteppingAction.hh
B4a/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
